--- a/reactjs/huntweb/src/pages/product/styles.css
+++ b/reactjs/huntweb/src/pages/product/styles.css
@@ -20,3 +20,23 @@
 .product-info p a {
   color: #069;
 }
+
+.option {
+  padding-top: 30px;
+}
+
+.button-back {
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  border: 0;
+  background: #da552f;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button-back:hover {
+  opacity: 0.7;
+}
