--- a/reactjs/huntweb/src/styles.css
+++ b/reactjs/huntweb/src/styles.css
@@ -8,5 +8,5 @@
 body {
   background: #fafafa;
   color: #333;
-  font-family: 'Roboto', 'Ubuntu', sans-serif;
+  font-family: "Roboto", "Ubuntu", sans-serif;
 }
