--- a/reactjs/huntweb/src/pages/product/styles.css
+++ b/reactjs/huntweb/src/pages/product/styles.css
@@ -2,9 +2,9 @@
   max-width: 700px;
   margin: 20px auto 0;
   padding: 20px;
-  background: #FFF;
+  background: #fff;
   border-radius: 5px;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
 }
 
 .product-info h1 {
