--- a/reactjs/huntweb/src/pages/main/styles.css
+++ b/reactjs/huntweb/src/pages/main/styles.css
@@ -5,8 +5,8 @@
 }
 
 .product-list article {
-  background: #FFF;
-  border: 1px solid #DDD;
+  background: #fff;
+  border: 1px solid #ddd;
   border-radius: 5px;
   padding: 20px;
   margin-bottom: 20px;
