--- a/reactjs/huntweb/src/components/Header/styles.css
+++ b/reactjs/huntweb/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 header#main-header {
   align-items: center;
   background: #da552f;
-  color: #FFF;
+  color: #fff;
   display: flex;
   font-size: 18px;
   font-weight: bold;
